Limit CPU allocated to gluster-exporter Lower CPU usage spike every scrap, and avoid fan spinning up and down.

--- a/ansible/install_infra/roles/glusterfs-server-install/handlers/main.yml
+++ b/ansible/install_infra/roles/glusterfs-server-install/handlers/main.yml
@@ -1,6 +1,7 @@
 ---
 
 - name: Restart Gluster Prometheus Exporter
-  service:
+  systemd:
     name: gluster-exporter.service
     state: restarted
+    daemon_reload: yes
