--- a/ansible/install_infra/roles/glusterfs-server-install/defaults/main.yml
+++ b/ansible/install_infra/roles/glusterfs-server-install/defaults/main.yml
@@ -19,3 +19,7 @@ glusterfs_brick_filesystem_arbiter_options: "-i size=512 -n size=8192 -i maxpct=
 #    mount_path: /path/on/kubernetes/node
 
 gluster_exporter_port: 8090
+
+# The percentage specifies how much CPU time the unit shall get at maximum, relative to the total CPU time available on one CPU
+# 100% = 1 core
+gluster_exporter_cpu_quota: 10%
