--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -13,6 +13,7 @@ controller:
   cpu_execution_cap: 33
   memory: 6144
   ip: 192.168.100.11
+  additional_bridge: True
   docker_disk_size: 16384
   data_disk_size: 8192
 
@@ -22,6 +23,7 @@ nodes:
     cpu_execution_cap: 33
     memory: 6144
     ip: 192.168.100.12
+    additional_bridge: True
     docker_disk_size: 32768
     data_disk_size: 65536
   - name: "master-3"
@@ -29,6 +31,7 @@ nodes:
     cpu_execution_cap: 33
     memory: 6144
     ip: 192.168.100.13
+    additional_bridge: True
     docker_disk_size: 32768
     data_disk_size: 65536
   - name: "node-home"
@@ -36,5 +39,6 @@ nodes:
     cpu_execution_cap: 33
     memory: 1024
     ip: 192.168.100.14
+    additional_bridge: True
     docker_disk_size: 8192
     data_disk_size: 8192
