Add avahi-daemon with reflector enabled

--- a/ansible/install_infra/roles/docker/handlers/main.yml
+++ b/ansible/install_infra/roles/docker/handlers/main.yml
@@ -5,3 +5,8 @@
     name: docker
     state: restarted
     daemon_reload: yes
+
+- name: Restart avahi
+  systemd:
+    name: avahi-daemon
+    state: restarted
