Fix fluentbit nginx_error parsor typo

--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/parsers/nginx_custom.conf
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/parsers/nginx_custom.conf
@@ -11,5 +11,5 @@
     Format regex
     Regex ^(?<time>\S* \S*)\s+\[(?<priority>\S+)\]\s+(?<pid>\d+)#(?<tid>\d+):\s+(\*(?<cid>\d+)\s+)?(?<message>.*?)$
     Time_Key time
-    Time_Format %Y/%m/%d/ %H:%M:%S
+    Time_Format %Y/%m/%d %H:%M:%S
     Time_Offset +0100
