--- a/ansible/install_applications/roles/web-homer.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-homer.deploy/tasks/main.yml
@@ -12,7 +12,7 @@
     private_image: "{{ homer.container.image }}"
     build: yes
     build_args:
-      homer_commit: "{{ homer.commit }}"
+      homer_release: "{{ homer.release }}"
 
 - name: Deploy Homer
   k8s:
