Fix web-homer logos

--- a/ansible/install_applications/roles/web-homer.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/web-homer.deploy/defaults/main.yml
@@ -4,7 +4,7 @@ homer_enabled: true
 
 homer_config_title: "Demo homepage"
 homer_config_subtitle: "Homer"
-homer_config_logo: "assets/logo.png"
+homer_config_logo: "logo.png"
 # Optionnal icon
 #homer_config_icon: "fas fa-skull-crossbones"
 
