--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
@@ -75,7 +75,7 @@
       )
     labels:
       workload_type: deployment
-    record: mixin_pod_workload
+    record: namespace_workload_pod:kube_pod_owner:relabel
   - expr: |
       max by (cluster, namespace, workload, pod) (
         label_replace(
@@ -85,7 +85,7 @@
       )
     labels:
       workload_type: daemonset
-    record: mixin_pod_workload
+    record: namespace_workload_pod:kube_pod_owner:relabel
   - expr: |
       max by (cluster, namespace, workload, pod) (
         label_replace(
@@ -95,4 +95,4 @@
       )
     labels:
       workload_type: statefulset
-    record: mixin_pod_workload
+    record: namespace_workload_pod:kube_pod_owner:relabel
