--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
@@ -54,19 +54,19 @@
     for: 5m
     labels:
       severity: warning
-  - alert: KubeQuotaExceeded
+  - alert: KubeQuotaFullyUsed
     annotations:
       message: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubequotaexceeded
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubequotafullyused
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
         / ignoring(instance, job, type)
       (kube_resourcequota{job="kube-state-metrics", type="hard"} > 0)
-        > 0.90
+        >= 1
     for: 15m
     labels:
-      severity: warning
+      severity: info
   - alert: CPUThrottlingHigh
     annotations:
       message: '{{ $value | humanizePercentage }} throttling of CPU in namespace {{
@@ -80,4 +80,4 @@
         > ( 33 / 100 )
     for: 15m
     labels:
-      severity: warning
+      severity: info
