--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
@@ -1,5 +1,23 @@
 - name: prometheus-operator.alerts
   rules:
+  - alert: PrometheusOperatorListErrors
+    annotations:
+      message: Errors while performing List operations in controller {{$labels.controller}}
+        in {{$labels.namespace}} namespace.
+    expr: |
+      (sum by (controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="prometheus-operator",namespace="monitoring"}[1h])) / sum by (controller,namespace) (rate(prometheus_operator_list_operations_total{job="prometheus-operator",namespace="monitoring"}[1h]))) > 0.4
+    for: 15m
+    labels:
+      severity: warning
+  - alert: PrometheusOperatorWatchErrors
+    annotations:
+      message: Errors while performing Watch operations in controller {{$labels.controller}}
+        in {{$labels.namespace}} namespace.
+    expr: |
+      (sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator",namespace="monitoring"}[1h])) / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator",namespace="monitoring"}[1h]))) > 0.4
+    for: 15m
+    labels:
+      severity: warning
   - alert: PrometheusOperatorReconcileErrors
     annotations:
       message: Errors while reconciling {{ $labels.controller }} in {{ $labels.namespace
