--- a/ansible/install_applications/vars/monitoring-keepalived-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-keepalived-exporter.yml
@@ -12,4 +12,4 @@ keepalived_exporter:
   labels_desc:
     app.kubernetes.io/version: custom
 
-  port: 2112
+  port: "{{ keepalived_exporter_port | default(9165) }}"
