--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -38,7 +38,7 @@ homer_images_to_download:
   - name: grafana.svg
     source: https://raw.githubusercontent.com/cncf/landscape/master/hosted_logos/grafana.svg
   - name: kibana.svg
-    source: https://symbols.getvecta.com/stencil_86/1_kibana-icon.90d43d6aab.svg
+    source: https://cdn.freebiesupply.com/logos/large/2x/elastic-kibana-logo-svg-vector.svg
 
   - name: lemon-ldap.svg
     source: "https://upload.wikimedia.org/wikipedia/fr/2/24/Logo_lemonldap-ng.svg"
