--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
@@ -18,6 +18,7 @@
    logstash_prefix "#{ENV['FLUENT_ELASTICSEARCH_LOGSTASH_PREFIX'] || 'logstash'}"
    logstash_format true
    type_name fluentd
+   suppress_type_name true
    <buffer>
      flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '8'}"
      flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '5s'}"
