--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -8,6 +8,11 @@
     - firewall
     - usb-serial
 
+- name: Provision bluetooth
+  hosts: bluetooth
+  roles:
+    - bluetooth
+
 - name: Provision Keepalived
   hosts: keepalived
   roles:
