--- a/ansible/inventories/vagrant/group_vars/all/storage.yml
+++ b/ansible/inventories/vagrant/group_vars/all/storage.yml
@@ -198,6 +198,16 @@ glusterfs_volumes:
       app.kubernetes.io/name: mosquitto
       app.kubernetes.io/component: mosquitto
       storage: data
+  openzwave-config:
+    replicas: 2
+    capacity: 64M
+    arbiterCapacity: 16M
+    nodes: [master-2, master-3]
+    arbiters: [master-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: openzwave
+      app.kubernetes.io/component: openzwave
   airsonic-data:
     replicas: 2
     capacity: 256M
