--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -52,6 +52,8 @@ homer_images_to_download:
     source: https://www.home-assistant.io/images/home-assistant-logo.svg
   - name: node-red.svg
     source: https://nodered.org/about/resources/media/node-red-icon-2.svg
+  - name: openzwave.png
+    source: https://avatars0.githubusercontent.com/u/7971916
 
   - name: gitlab.svg
     source: https://raw.githubusercontent.com/cncf/landscape/master/hosted_logos/gitlab.svg
@@ -166,6 +168,11 @@ homer_config_services:
         logo: "assets/download/node-red.svg"
         url: "https://home.{{ web_base_domain }}/node-red/"
         subtitle: "Flow-based programming for the IoT"
+        target: "_blank"
+      - name: "OpenZWave"
+        logo: "assets/download/openzwave.png"
+        url: "https://home.{{ web_base_domain }}/openzwave/vnc.html"
+        subtitle: " QT5 Wrapper for OpenZWave"
         target: "_blank"
   - name: "Dev"
     icon: "fab fa-dev"
