--- a/ansible/install_applications/roles/home-roomassistant.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/defaults/main.yml
@@ -14,8 +14,11 @@ roomassistant_config_instance_name: 'example-room'
 # See https://www.room-assistant.io/integrations/bluetooth-low-energy.html#settings
 #roomassistant_config_integrations_ble: 
 #  whitelist:
-#    - 77-50-fb-4d-ab-70
+#    - 7750fb4dab70
 #    - 2f234454cf6d4a0fadf2f4911ba9ffa6-1-2
+#  tagOverrides:
+#    7750fb4dab70:
+#      name: Some device name
 #  timeout: 5
 #  maxDistance: 7
 
