--- a/ansible/inventories/vagrant/group_vars/all/apps/home-openzwave.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/home-openzwave.yml
@@ -2,3 +2,7 @@
 
 openzwave_mqtt_user: user
 openzwave_mqtt_password: Passw0rd
+
+# define mandatory variables to avoid issues with helpers/release-watcher
+openzwave_serial_remote_device: {}
+openzwave_ozw_network_key: ""
