--- a/ansible/install_applications/vars/home-openzwave.yml
+++ b/ansible/install_applications/vars/home-openzwave.yml
@@ -4,7 +4,7 @@
 _openzwave_var_loader:
   base_image:
     name: "openzwave/ozwdaemon"
-    tag: "allinone-build-169"
+    tag: "allinone-amd64-170"
 
 openzwave:
   enabled: "{{ openzwave_enabled | default(True) }}"
